--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -2,46 +2,23 @@
 layout: default
 ---
 
-<article>
+<article class="note-layout">
+  <div class="back-button-container">
+    <a href="/" class="back-button">← Back</a>
+  </div>
+
   <div>
     <h1>{{ page.title }}</h1>
-    <time datetime="{{ page.last_modified_at | date_to_xmlschema }}">{% if page.type != 'pages' %}
-      Last updated on {{ page.last_modified_at | date: "%B %-d, %Y" }}
+    <time datetime="{% if page.date %}{{ page.date | date_to_xmlschema }}{% else %}{{ page.last_modified_at | date_to_xmlschema }}{% endif %}">
+      {% if page.type != 'pages' %}
+        Published on {% if page.date %}{{ page.date | date: "%B %-d, %Y" }}{% else %}{{ page.last_modified_at | date: "%B %-d, %Y" }}{% endif %}
       {% endif %}
     </time>
   </div>
 
-  <div id="notes-entry-container">
+  <div>
     <content>
       {{ content }}
-      <p>This line appears after every note.</p>
     </content>
-
-    <side style="font-size: 0.9em">
-      <h3 style="margin-bottom: 1em">Notes mentioning this note</h3>
-      {% if page.backlinks.size > 0 %}
-      <div style="display: grid; grid-gap: 1em; grid-template-columns: repeat(1fr);">
-      {% for backlink in page.backlinks %}
-        <div class="backlink-box">
-        <a class="internal-link" href="{{ site.baseurl }}{{ backlink.url }}{%- if site.use_html_extension -%}.html{%- endif -%}">{{ backlink.title }}</a><br>
-        <div style="font-size: 0.9em">{{ backlink.excerpt | strip_html | truncatewords: 20 }}</div>
-        </div>
-      {% endfor %}
-      </div>
-      {% else %}
-
-      <div style="font-size: 0.9em">
-        <p>
-          There are no notes linking to this note.
-        </p>
-      </div>
-      {% endif %}
-    </side>
   </div>
 </article>
-
-<hr>
-
-<p>Here are all the notes in this garden, along with their links, visualized as a graph.</p>
-
-{% include notes_graph.html %}
